--- a/style.css
+++ b/style.css
@@ -56,12 +56,30 @@ h1.title {
     margin: 0 auto;
     overflow: hidden;
     position: relative;
+    transition: all 0.3s ease;
+}
+
+@keyframes shrink-to-circle {
+    0% {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        opacity: 1;
+    }
+
+    100% {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        opacity: 0;
+    }
 }
 
 .empty-box.minimized {
     width: 60px;
     height: 60px;
     border-radius: 50%;
+    animation: reshape-to-circle 0.3s forwards;
 }
 
 .empty-box:not(.minimized)::before,
@@ -83,19 +101,15 @@ h1.title {
 }
 
 
+
 .content {
     position: absolute;
     top: 15px;
     left: 25px;
     width: 100%;
     text-align: left;
-    transition: transform 0.5s ease-in-out;
 }
 
-.collapsed {
-    transform-origin: top right;
-    transform: translate(0, -100%) scale(0);
-}
 
 .image {
     width: 60px;
