--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ h1.title {
 
 .empty-box {
     position: relative;
-    width: 400px;
-    height: 700px;
-    background: linear-gradient(-45deg, #00bca1, #5dd6ae, #aeebb8); 
+    width: 350px;
+    height: 550px;
+    background: linear-gradient(-45deg, #00bca1, #5dd6ae, #aeebb8);
     border: 3px solid #ffffff;
     border-radius: 50px;
     margin: 0 auto;
@@ -73,6 +73,95 @@ h1.title {
         border-radius: 50%;
         opacity: 0;
     }
+}
+
+.image-box {
+    width: 320px;
+    height: 180px;
+    background-image: url("test.png");
+    background-size: cover;
+    background-position: center;
+    position: absolute; 
+    top: 34%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 5px solid #ffffff;
+    border-radius: 30px;
+}
+
+.bottom-box {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-color: #ffffff;
+}
+
+.logo-content {
+    display: flex;
+    align-items: center;
+}
+
+.cafe-text {
+    font-family: 'Pretendard', sans-serif;
+    color: #ffffff; /* 텍스트 색상 설정 */
+    font-size: 20px; /* 원하는 폰트 크기로 조절하세요 */
+}
+.youtube-text {
+    font-family: 'Pretendard', sans-serif;
+    color: #ffffff; /* 텍스트 색상 설정 */
+    font-size: 20px; /* 원하는 폰트 크기로 조절하세요 */
+}
+
+.main-btn1 {
+    position: absolute;
+    top: 62%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: none;
+    width: 320px;
+    height: 60px;
+    background: linear-gradient(90deg, rgb(176, 235, 184) 0%, rgb(0, 199, 167) 100%);
+    border-radius: 1000px;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.8);
+    font-weight: 700;
+    font-family: 'Pretendard', sans-serif;
+    transition: 0.3s;
+}
+
+.cafe-logo{
+    width: 60px;
+    height: 60px;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+.main-btn2 {
+    position: absolute;
+    top: 76%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: none;
+    width: 320px;
+    height: 60px;
+    background: linear-gradient(90deg, rgb(176, 235, 184) 0%, rgb(0, 199, 167) 100%);
+    border-radius: 1000px;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.8);
+    font-weight: 700;
+    font-family: 'Pretendard', sans-serif;
+    transition: 0.3s;
+}
+
+.youtube-logo{
+    width: 60px;
+    height: 60px;
+    object-fit: cover;
+    margin-right: 10px;
 }
 
 .empty-box.minimized {
@@ -99,8 +188,6 @@ h1.title {
 .empty-box::after {
     bottom: 80px;
 }
-
-
 
 .content {
     position: absolute;
@@ -139,6 +226,7 @@ h1.title {
     top: 30px;
     right: 30px;
 }
+
 .footer {
     position: absolute;
     bottom: 20px;
@@ -184,7 +272,7 @@ h1.title {
 .reload-screen-button-container img {
     width: 100%;
     height: 100%;
-    object-fit: cover; 
+    object-fit: cover;
 }
 
 .change-screen-button-container {
@@ -203,6 +291,7 @@ h1.title {
     height: 70%;
     object-fit: cover;
 }
+
 .animation {
     animation: slide 2s;
 }
